# Merge-Sort-AWS-Lambda-CloudFormation-Deployment

./: Cargo.toml  build-steps.txt  cloud-formation.yml  deployment-steps.txt  example-api-gateway-event.txt
src/: helpers.rs  main.rs  types.rs
